--- a/src/app/Component/register/register.component.html
+++ b/src/app/Component/register/register.component.html
@@ -32,7 +32,7 @@
           </mat-form-field>
         <br>
           <mat-form-field appearance="fill">
-            <mat-label>Bank ID</mat-label>
+            <mat-label>Bank-ID</mat-label>
             <input matInput formControlName="bankId" placeholder="Enter bank ID">
            </mat-form-field>
         <br>
