Second Commint by Darshan

--- a/src/app/Component/register/register.component.html
+++ b/src/app/Component/register/register.component.html
@@ -27,7 +27,7 @@
         </mat-form-field>
     <br>
         <mat-form-field appearance="fill">
-            <mat-label>User Name</mat-label>
+            <mat-label>User-Name</mat-label>
             <input matInput formControlName="userName" placeholder="Enter user name">
           </mat-form-field>
         <br>
