--- a/src/app/Component/register/register.component.html
+++ b/src/app/Component/register/register.component.html
@@ -22,12 +22,12 @@
          </mat-form-field>
       <br>
         <mat-form-field appearance="fill">
-          <mat-label>User Address</mat-label>
+          <mat-label>User+-Address</mat-label>
           <textarea matInput formControlName="userAddress" placeholder="Enter user address"></textarea>
         </mat-form-field>
     <br>
         <mat-form-field appearance="fill">
-            <mat-label>User-Name</mat-label>
+            <mat-label>User--Name</mat-label>
             <input matInput formControlName="userName" placeholder="Enter user name">
           </mat-form-field>
         <br>
