Commit by Darshan Uap Project

--- a/src/app/Component/registerfirst/registerfirst.component.html
+++ b/src/app/Component/registerfirst/registerfirst.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <form [formGroup]="loginAdmin"  class="mat-typography" style="color: black;">
-    <h1>Login Form</h1>
+    <form [formGroup]="registerFirstAdminForm"  class="mat-typography" style="color: black;">
+    <h1>Registration Form</h1>
     <hr>
     
         <mat-form-field appearance="fill" >
@@ -20,3 +20,4 @@
       </div>
     </form>
 </div> 
+
