--- a/src/app/Component/register/register.component.html
+++ b/src/app/Component/register/register.component.html
@@ -6,7 +6,7 @@
     <hr>
     
         <mat-form-field appearance="fill" >
-          <mat-label>Email</mat-label>
+          <mat-label>Email Id </mat-label>
           <input matInput formControlName="email" placeholder="Enter email">
          </mat-form-field>
       <br>
