--- a/src/app/Component/login/login.component.html
+++ b/src/app/Component/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <form [formGroup]="loginAdmin"  class="mat-typography" style="color: black;">
-    <h1>Login Form</h1>
+    <h1>Sign Up Form</h1>
     <hr>
     
         <mat-form-field appearance="fill" >
