--- a/src/app/Component/login/login.component.html
+++ b/src/app/Component/login/login.component.html
@@ -1,17 +1,17 @@
 <div class="container">
     <form [formGroup]="loginAdmin"  class="mat-typography" style="color: black;">
-    <h1>Sign Up Form</h1>
+    <h1>Login Form</h1>
     <hr>
     
         <mat-form-field appearance="fill" >
           <mat-label>Email</mat-label>
-          <input matInput formControlName="userEmail" placeholder="Enter email">
+          <input matInput formControlName="email" placeholder="Enter email">
          </mat-form-field>
       <br>
 
         <mat-form-field appearance="fill">
           <mat-label>Password</mat-label>
-          <input matInput type="password" formControlName="userPass" placeholder="Enter password">
+          <input matInput type="password" formControlName="password" placeholder="Enter password">
          </mat-form-field>
       <br>
 
