Darshan code push

--- a/src/app/Component/dashboard/dashboard.component.html
+++ b/src/app/Component/dashboard/dashboard.component.html
@@ -58,7 +58,8 @@
         <th>User Address</th>
         <th>User Id </th>
         <th>Excel upload </th>
-        <th>Edit-status</th>
+        <th>Approve Status</th>
+        <th>Reject Status</th>
         
     </tr>
     <tr *ngFor="let stu of allPendingData; index as i">
