--- a/src/app/Component/dashboard/dashboard.component.css
+++ b/src/app/Component/dashboard/dashboard.component.css
@@ -32,3 +32,74 @@
 button[mat-button] {
     margin: 2px;
 }
+
+
+#dataLink {
+
+    /* width: 100%; */
+    text-align: center;
+    justify-content: center;
+    display: flex;
+    width: 100vh;
+    border-radius: 10px;
+    padding: 20px;
+}
+
+#datalinktext {
+    font-size: xx-large;
+    /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
+}
+#linkdata
+{
+    font-size: xx-large;
+    font-family: 'Times New Roman', Times, serif;
+    color: #0004fa;
+}
+#linkdata:hover
+{
+    color: black;
+}
+.image-container
+{
+    border: 1px solid;
+    height: 100vh;
+    background-image: url('src\assets\images\msme.png'); /* Replace 'your-image-url.jpg' with your image URL */
+    background-size: cover;
+    background-position: center;
+    max-width: 30%;
+    padding: 10px;
+}
+
+.main-content {
+    padding: 20px;
+}
+.custom-link {
+    text-decoration: none;
+    color: #0004fa;
+    position: relative;
+    
+}
+.custom-link:hover {
+    color: #000000;
+}
+.custom-link::after {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 2px;
+    display: block;
+    margin-top: 5px;
+    right: 0;
+    background: white;
+    transition: width 0.4s ease;
+    -webkit-transition: width 0.4s ease;
+}
+.custom-link:hover::after {
+    width: 100%;
+    left: 0;
+    background: rgb(0, 0, 0);
+}
+.mat-elevation-z8
+{
+    border: 1px solid;
+}
