--- a/src/app/Component/dashboard/dashboard.component.html
+++ b/src/app/Component/dashboard/dashboard.component.html
@@ -4,9 +4,8 @@
 
 <!-- <p><a lass="link-warning" (click)="getAllApprovedata()">Get All Approve Data</a></p> -->
 <div id="pdfContent">
-<table class="table table-warning table-striped-columns">
-    <tr *ngIf="allApproveData !=null">
-        <th>Index No</th>
+<table  *ngIf="oneApprovedData !=null" class="table table-warning table-striped-columns">
+    <tr>
         <th>bankId No</th>
         <th>Branch</th>
         <th>Created Date</th>
@@ -18,25 +17,21 @@
         <th>Status</th>
         <th>User Address</th>
         <th>User Id </th>
-        <th>Excel upload </th>
-
-        
+        <th>Excel upload </th> 
     </tr>
-    <tr *ngFor="let stu of allApproveData; index as i">
-        <td>{{i+1}}</td>
-        
-        <td>{{stu.bankId}}</td>
-        <td>{{stu.branch}}</td>
-        <td>{{stu.createdDate}}</td>
-        <td>{{stu.designation}}</td>
-        <td>{{stu.email}}</td>
-        <td>{{stu.ifscCode}}</td>
-        <td>{{stu.mobileNo}}</td>
-        <td>{{stu.password}}</td>
-        <td>{{stu.status}}</td>
-        <td>{{stu.userAddress}}</td>
-        <td>{{stu.userID}}</td>
-        <td>{{stu.excelUpload}}</td>
+    <tr>
+        <td>{{oneApprovedData.bankId}}</td>
+        <td>{{oneApprovedData.branch}}</td>
+        <td>{{oneApprovedData.createdDate}}</td>
+        <td>{{oneApprovedData.designation}}</td>
+        <td>{{oneApprovedData.email}}</td>
+        <td>{{oneApprovedData.ifscCode}}</td>
+        <td>{{oneApprovedData.mobileNo}}</td>
+        <td>{{oneApprovedData.password}}</td>
+        <td>{{oneApprovedData.status}}</td>
+        <td>{{oneApprovedData.userAddress}}</td>
+        <td>{{oneApprovedData.userID}}</td>
+        <td>{{oneApprovedData.excelUpload}}</td>
   
         
     </tr>
@@ -83,14 +78,6 @@
         
     </tr>
 </table>  
-
-<!-- <div id="pdfContent">
-        <h1>Jayesh </h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur, dignissimos voluptas vitae non incidunt doloribus accusantium error suscipit. Maiores, cumque dolore. Tempore amet autem exercitationem ex sit odit fugit delectus.</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium eaque a pariatur repellat reprehenderit neque, consectetur veniam aut nihil. A repudiandae illo cum velit recusandae fuga, blanditiis ea voluptatem alias quidem ab consequatur, quaerat quibusdam nihil facere neque nesciunt quia ipsam, dolorum nisi ducimus qui nemo ipsa? Facere itaque amet consequatur, debitis minus aliquam deserunt iure natus nostrum numquam temporibus repellat voluptas necessitatibus asperiores atque, dolore vero eveniet officia? Vitae eos aperiam excepturi provident vel perferendis animi quo non officia distinctio dolorum enim nam, repudiandae quos unde dicta aspernatur reiciendis quibusdam iusto magni possimus quidem aliquid. Totam perferendis laboriosam deserunt.</p> -->
-
-
-
 
 
 <button mat-button color="primary" (click)="generatePdf()">generatePdf</button>
