Certificate Created By Dhaval

--- a/src/app/Component/home/home.component.html
+++ b/src/app/Component/home/home.component.html
@@ -1,22 +1,138 @@
 <!-- src/app/home/home.component.html -->
 <!-- <app-navbar></app-navbar> -->
-  <!DOCTYPE html>
+  <!-- <!DOCTYPE html>
   <html lang="en">
   <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>MSME / Udyam Registration</title>
-      <style>
-        
-      </style>
   </head>
-  <body>
+  <body> -->
+    <style>
+      .box {
+    border: 1px solid black;
+    padding: 20px;
+    margin-bottom: 20px;
+  }
+  
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .col-12 {
+    flex-basis: 100%;
+  }
+  
+  .col-md-2 {
+    flex: 0 0 16.666667%;
+    max-width: 16.666667%;
+    padding: 0 15px;
+  }
+  
+  .info-box {
+    border: 1px solid #ccc;
+    padding: 20px;
+    margin-bottom: 20px;
+  }
+  
+  .info-box-content {
+    text-align: center;
+  }
+  
+  .info-box-text {
+    font-weight: bold;
+  }
+  
+  .info-box-number {
+    font-size: 25px;
+  }
+  body {
+    font-family: Arial, sans-serif;
+    background-color: #191970;
+    color: white;
+    margin: 0;
+    padding: 0;
+}
+.container {
+    width: 80%;
+    margin: 0 auto;
+    text-align: center;
+}
+header {
+    padding: 20px;
+}
+header img {
+    width: 80px;
+    vertical-align: middle;
+}
+header h1 {
+    display: inline-block;
+    margin-left: 10px;
+    vertical-align: middle;
+}
+nav {
+    text-align: right;
+    margin: 20px 0;
+}
+nav a {
+    color: white;
+    text-decoration: none;
+    margin: 0 10px;
+}
+nav a:hover {
+    text-decoration: underline;
+}
+.content {
+    background-color: #1E90FF;
+    padding: 20px;
+    border-radius: 10px;
+}
+.content h2 {
+    margin-top: 0;
+}
+.button {
+    display: block;
+    width: 60%;
+    margin: 10px auto;
+    padding: 15px;
+    background-color: #0000FF;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+}
+.button:hover {
+    background-color: #00008B;
+}
+.steps {
+    margin-top: 30px;
+    text-align: left;
+}
+.steps img {
+    float: right;
+    width: 200px;
+}
+.steps h3 {
+    background-color: #FFA500;
+    padding: 10px;
+    border-radius: 5px;
+    display: inline-block;
+}
+footer {
+    margin-top: 30px;
+    padding: 20px;
+    background-color: #000080;
+    border-radius: 10px;
+}
+
+  
+    </style>
     <app-navbar></app-navbar>
       <header>
           <h1>Ministry of Micro, Small & Medium Enterprises</h1>
       </header>
     
-      <div class="container">
+      <div class="container" style="border: 2px solid;">
           <div class="content">
               <h2>MSME / Udyam Registration Process</h2>
               <p>Welcome to Register here</p>
@@ -26,7 +142,7 @@
               <a href="#" class="button">For Informal Micro Enterprises</a>
           </div>
           <div class="steps">
-              <img src="https://udyamregistration.org.in/blog/wp-content/uploads/2023/04/Copy-of-Add-a-subheading-1024x576.jpg" alt="Steps">
+              <!-- <img src="https://udyamregistration.org.in/blog/wp-content/uploads/2023/04/Copy-of-Add-a-subheading-1024x576.jpg" alt="Steps"> -->
               <h3>CHAMPIONS</h3>
               <h3>MEDIUM</h3>
               <h3>SMALL</h3>
@@ -37,11 +153,12 @@
           <p>Factsheet of MSME (Udyam) Registration Including Udyam Assist Platform (UAP)</p>
           <p>Facts Dated: 24/05/2024 03:00:02 PM</p>
       </footer>
-  </body>
-  </html>
+  <!-- </body>
+  </html> -->
   
 
-<h2 style="text-align: center;" >UDYAM REGISTRATION PORTAL</h2><hr>
+<h2 style="text-align: center;" >UDYAM REGISTRATION PORTAL</h2>
+<!-- <hr> -->
 <div class="box">
 
                    <p> An enterprise shall be classified as a micro, small or medium
@@ -63,7 +180,7 @@
     </ul>
   <p>For the detailed legal framework  for classification of MSMEs and Procedure for their Registration 
   
-   <a href="/clickhere" style="font-size:26px"> Click Here</a> </p>
+   <a href="#" style="font-size:26px"> Click Here</a> </p>
  
 </div>
 
