--- a/src/app/Component/uapcerty/uapcerty.component.html
+++ b/src/app/Component/uapcerty/uapcerty.component.html
@@ -64,7 +64,7 @@
       }
     </style>
   </head>
-  <body>
+  <body #content>
     <div class="container">
       <div class="header">
        
@@ -140,4 +140,5 @@
       </div>
     </div>
   </body>
+  <button class="btn btn-primary text-center" (click)="downloadHtml()"> Download</button>
 </html>
