tarnslate code by jayesh

--- a/src/app/Component/dashboard/dashboard.component.html
+++ b/src/app/Component/dashboard/dashboard.component.html
@@ -154,3 +154,12 @@
 </table>  
 
 
+<button (click)="switchLanguage('en')">English</button>
+
+<button (click)="switchLanguage('gu')">Gujarati</button>
+
+<h3>{{"Government of India" | translate }}</h3>
+
+
+
+
